--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@apollo/client": "^3.4.7",
     "apollo-server-express": "^3.1.2",
+    "bootstrap": "^5.1.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
-    "npm": "^7.20.6"
+    "npm": "^7.20.6",
+    "react": "^17.0.2"
   }
 }
