--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,14 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.4.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
     "faker": "^5.5.3",
     "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
